--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
       0% { transform: translateY(0) rotate(0deg); opacity: 1; }
       100% { transform: translateY(110vh) rotate(720deg); opacity: 0; }
     }
+
+    /* --- 📱 手機螢幕自動放大調整 --- */
+@media screen and (max-width: 600px) {
+  .greeting h1 {
+    font-size: 2em; /* 稍微縮小標題避免換行 */
+  }
+  
+  .tree-container {
+    width: 280px;  /* 寬度從 200px 放大到 280px */
+    height: 450px; /* 高度同步拉長 */
+    transform: scale(1.3); /* 整體比例直接放大 1.3 倍 */
+  }
+
+  .star-top {
+    font-size: 65px; /* 星星稍微再變大一點好點擊 */
+    top: -65px;
+  }
+}
   </style>
 </head>
 <body>
@@ -165,3 +183,4 @@
   </script>
 </body>
 </html>
+
